--- a/OpenGL_WuMing/OpenGL_WuMing.vcxproj.filters
+++ b/OpenGL_WuMing/OpenGL_WuMing.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\tests\TestClearColor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\Test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Shaders\Basic.shader" />
