--- a/OpenGL_WuMing/OpenGL_WuMing.vcxproj.filters
+++ b/OpenGL_WuMing/OpenGL_WuMing.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\tests\Test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\TestTexture2D.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Shaders\Basic.shader" />
@@ -1389,6 +1392,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\TestClearColor.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\TestTexture2D.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
